<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.1"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.1 http://maven.apache.org/xsd/maven-4.0.1.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.eclipse.set</groupId>
	<artifactId>org.eclipse.set.browser.releng.parent</artifactId>
	<version>2.1.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<properties>
		<tycho-version>4.0.1</tycho-version>
		<tycho-extras-version>4.0.1</tycho-extras-version>
		<deploy-plugin-version>3.1.1</deploy-plugin-version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.build.timestamp.format>yyyyMMdd_HHmmssZ</maven.build.timestamp.format>
	</properties>

	<modules>
		<module>org.eclipse.set.browser</module>
		<module>org.eclipse.set.browser.lib</module>
		<module>org.eclipse.set.browser.cef.win32</module>
		<module>org.eclipse.set.browser.releng.target</module>
	</modules>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>${deploy-plugin-version}</version>
			</plugin>

			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-compiler-plugin</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<showWarnings>true</showWarnings>
					<showDeprecation>true</showDeprecation>
					<useProjectSettings>true</useProjectSettings>
					<compilerVersion>17</compilerVersion>
					<release>17</release>
					<log>plain</log>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-versions-plugin</artifactId>
				<version>${tycho-version}</version>
			</plugin>

			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho-version}</version>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho-version}</version>
				<configuration>

					<target>
						<artifact>
							<groupId>org.eclipse.set</groupId>
							<artifactId>org.eclipse.set.browser.releng.target</artifactId>
							<version>${project.version}</version>
						</artifact>
					</target>

					<environments>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86_64</arch>
						</environment>
					</environments>
				</configuration>
			</plugin>

			<!-- Erzeuge ein source-Feature für die Source-Bundles -->
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-source-plugin</artifactId>
				<version>${tycho-extras-version}</version>
				<executions>
					<execution>
						<id>feature-source</id>
						<phase>package</phase>
						<goals>
							<goal>feature-source</goal>
						</goals>
					</execution>
					<execution>
						<id>plugin-source</id>
						<goals>
							<goal>plugin-source</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<scm>
		<connection>scm:git:https://github.com/eclipse-set/browser</connection>
		<developerConnection>scm:git:https://github.com/eclipse-set/browser</developerConnection>
	</scm>

	<distributionManagement>
		<repository>
			<id>set-github</id>
			<name>GitHub Packages</name>
			<url>https://maven.pkg.github.com/eclipse-set/browser</url>
		</repository>
	</distributionManagement>

	<pluginRepositories>
		<pluginRepository>
			<id>dash-licenses-snapshots</id>
			<url>https://repo.eclipse.org/content/repositories/dash-licenses-snapshots/</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>
</project>
